src/test/ui/consts/const-eval/assign-to-static-within-other-static-2.stderr
error[E0019]: static contains unimplemented expression type
  --> $DIR/assign-to-static-within-other-static-2.rs:17:5
   |
LL |     *FOO.0.get() = 5; //~ ERROR contains unimplemented expression type
   |     ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0019`.
